--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.css"
     />
     <!-- import the webpage's stylesheet -->
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
 
     <!-- import the webpage's client-side javascript file -->
     <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
