--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="A cool thing made with Glitch" />
   <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.css" />
-  <link rel="stylesheet" href="/src/style.css" />
+  <link rel="stylesheet" href="css\style.css" />
   
   <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.js"></script>
