made the web page look prettier

--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Welcome to Glitch!</title>
+  <title>Plant Sensor</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="A cool thing made with Glitch" />
-  <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon" />
+  <link id="favicon" rel="icon" href="https://i.pinimg.com/474x/0a/c6/6f/0ac66fe759b624f053efa5f5bc2b78f1.jpg" type="image/x-icon" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.css" />
   <!-- import the webpage's stylesheet -->
-  <link rel="stylesheet" href="/src/style.css" />
+  <link rel="stylesheet" href="/public/style.css" />
 
   <!-- import the webpage's client-side javascript file -->
   <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"></script>
